--- a/style.css
+++ b/style.css
@@ -110,11 +110,12 @@ text-align: center;
  position: absolute;
  top: 0;
  left: 0;
- background-color:  hsl(261deg 80% 48%);
+ background-color: var(--hover);
  transition: .5s ease;
  display: block;
  z-index: -1;
  text-align: center;
+ 
 }
 .navbar li a:hover::before{
   width: 7em;
